WS2-803: Fix button misalignment.

--- a/src/components/_form-overrides.scss
+++ b/src/components/_form-overrides.scss
@@ -5,3 +5,9 @@
     margin-top: 2.5rem;
   }
 }
+
+form.uds-form {
+  input {
+    padding-left: $uds-size-spacing-4 !important;
+  }
+}
